Added files via upload

--- a/index.html
+++ b/index.html
@@ -1,9 +1,170 @@
 <!DOCTYPE html>
-<html lang="zh-cn">
+<html lang="en">
 <head>
-<meta charset="utf-8">
+<title>ife_task01</title>
+<meta charset="utf-8" >
 </head>
 <body>
-<p>网站一级标题<p>
+	<h1>网站一级标题</h1>
+	<ul>
+		<li><a>导航链接一</a></li>
+		<li><a>导航链接二</a></li>
+		<li><a>导航链接三</a></li>
+		<li><a>导航链接四</a></li>
+	</ul>
+	<h2>文章一级标题</h2>
+	<figure>
+		<figcaption>
+			<h2>文章二级标题</h2>
+			<p>文章这这 文章发布时间</p>
+			<p>这是一个很长很长的段落，
+			这是一个很长很长的段落，
+			这是一个很长很长的段落，
+			这是一个很长很长的段落，
+			<a href="http://ife.baidu.com">这里有个链接到百度前端www.ife.baidu.com</a>
+			这是一个很长很长的段落，
+			这是一个很长很长的段落，
+			这是一个很长很长的段落，
+			<br/>
+			这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，
+			这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，
+			这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，
+			这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，
+			</p>
+		</figcaption>
+		<img src="http://ww2.sinaimg.cn/large/005OIw69gw1evm6oxy9pgj31hc0u0wmi.jpg" alt="">
+		<figcaption>
+			<p>这是一个很长很长的段落，
+			这是一个很长很长的段落，
+			这是一个很长很长的段落，
+			这是一个很长很长的段落，
+			这是一个很长很长的段落，
+			这是一个很长很长的段落，
+			这是一个很长很长的段落，
+			<br/>
+			这是一个很长很长的段落，
+						<a href="http://ife.baidu.com">这里有个链接到百度前端www.ife.baidu.com</a>
+			这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，
+			这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，
+			这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，
+			这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，
+			</p>
+		</figcaption>
+	</figure>
+	<ol>
+		<li>排名1</li>
+		<li>排名2</li>
+		<li>排名3</li>
+	</ol>
+	<table border="1">
+		<tr>
+			<th>表头</th>
+			<th>表头</th>
+			<th>表头</th>
+		</tr>
+		<tr>
+			<td>单元格内容</td>
+			<td>单元格内容</td>
+			<td>单元格内容</td>
+		</tr>
+		<tr>
+			<td rowspan="2">单元格内容</td>
+			<td>单元格内容</td>
+			<td>单元格内容</td>
+		</tr>
+		<tr>
+
+			<td>单元格内容</td>
+			<td>单元格内容</td>
+		</tr>
+		<tr>
+			<td>单元格内容</td>
+			<td>单元格内容</td>
+			<td>单元格内容</td>
+		</tr>
+		<tr>
+			<td>总计</td>
+			<td colspan="2">1000</td>
+
+		</tr>
+	</table>
+	<table>
+		<tr>
+			<th style="border:1px solid black">表头</th>
+			<th style="border:1px solid black">表头</th>
+			<th style="border:1px solid black">表头</th>
+		</tr>
+		<tr>
+			<td style="border:1px solid black">表内容单元格</td>
+			<td style="border:1px solid black">表内容单元格</td>
+			<td style="border:1px solid black">表内容单元格</td>
+		</tr>
+		<tr>
+			<td style="border:1px solid black">表内容单元格</td>
+			<td style="border:1px solid black">表内容单元格</td>
+			<td style="border:1px solid black"><a href="">操作</a></td>
+		</tr>
+		<tr>
+			<td style="border:1px solid black">表内容单元格</td>
+			<td style="border:1px solid black">表内容单元格</td>
+			<td style="border:1px solid black"><a href="">操作</a></td>
+		</tr>
+		<tr>
+			<td style="border:1px solid black">表内容单元格</td>
+			<td style="border:1px solid black">表内容单元格</td>
+			<td style="border:1px solid black"><a href="">操作</a></td>
+		</tr>
+		<tr>
+			<td style="border:1px solid black">总计</td>
+			<td style="border:1px solid black" colspan="2">1000</td>
+
+		</tr>
+	</table>
+	<!--table中可设置border="1";代替全部的style
+		colspan="2"表示一个单元格占两列
+		rowspan="2"表示一个单元格占两行
+	-->
+	<br>
+	<br>
+	<form action="#" method="post">
+		<label for="email">请输入邮箱地址：</label>
+		<input type="text" name="email" placeholder="这是一个文本输入框">
+		<br>
+		<label for="">邮箱地址请按要求输入严格格式</label>
+		<br>
+		<label for="password">请输入密码：</label>
+		<input type="text" name="password" placeholder="文本输入框">
+		<label for="password">请再次确认密码输入：</label>
+		<input type="text" name="password" placeholder="文本输入框">
+		<br>
+		<!-- 单选 -->
+		/*单选的radio的name名字要相同*/
+		<span>男：</span>
+		<input type="radio" name="sex" value="man" checked="checked">
+		<span>女：</span>
+		<input type="radio" name="sex" value="feman">
+		<br>
+		<!-- 下拉菜单 -->
+		<select name="city" id="sel">
+			<option value="bj">北京</option>
+			<option value="sh" selected="selected">上海</option>
+			<!-- select默认选择用selected="selected"-->			
+			<option value="tj">天津</option>
+			<option value="hn">海南</option>
+		</select>
+		<br><br>
+		<!-- 多选项目 -->
+		<span>爱好：</span>
+		<label for="zq"><input type="checkbox" name="zq" checked="checked">足球</label>
+		<label for="sq"><input type="checkbox" name="sq">水球</label>
+		<label for="lq"><input type="checkbox" name="lq">蓝球</label>
+		<label for="pq"><input type="checkbox" name="pq" checked="checked">排球</label>
+		<label for="sq"><input type="checkbox" name="sq">首球</label>
+		<br><br>
+		<textarea name="sm" id="" cols="20" rows="3">这是一个好人这是一个好人这是一个好人这是一个好人这是一个好人这是一个好人这是一个好人这是一个好人这是一个好人这是一个好人这是一个好人这是一个好人这是一个好人这是一个好人这是一个好人
+		这是一个好人这是一个好人这是一个好人这是一个好人这是一个好人</textarea>
+		<input type="submit" value="确认提交">
+		<br><br>
+	</form>
 </body>
 </html>
